[gd_scene load_steps=4 format=2]

[ext_resource path="res://object/ColorPicker/ColorHolder/ColorHolder.tscn" type="PackedScene" id=1]
[ext_resource path="res://object/ColorPicker/ColorPicker.gd" type="Script" id=2]
[ext_resource path="res://object/ColorPicker/ColorList.gd" type="Script" id=3]

[node name="ColorPicker" type="PopupPanel"]
margin_right = 435.0
margin_bottom = 470.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorList" type="MarginContainer" parent="HBoxContainer"]
margin_right = 115.0
margin_bottom = 462.0
size_flags_horizontal = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 3 )

[node name="vBox" type="VBoxContainer" parent="HBoxContainer/ColorList"]
margin_left = 5.0
margin_top = 5.0
margin_right = 110.0
margin_bottom = 457.0
size_flags_horizontal = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorHolder" parent="HBoxContainer/ColorList/vBox" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 105.0
margin_bottom = 25.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 119.0
margin_right = 427.0
margin_bottom = 462.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 50.0

[node name="ColorPicker" type="ColorPicker" parent="HBoxContainer/VBoxContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0
size_flags_vertical = 3
edit_alpha = false
presets_enabled = false
presets_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 438.0
margin_right = 308.0
margin_bottom = 462.0
custom_constants/separation = 5

[node name="Title" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 202.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Edit" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 207.0
margin_right = 308.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "edit"
[connection signal="color_changed" from="HBoxContainer/VBoxContainer/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Edit" to="." method="_on_Edit_pressed"]
